# campmanager

./: .coveragerc  .env.template  .flake8  .gitignore  Camp Manager.sublime-project  Procfile  README.md  conftest.py  fabfile.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
backups/: 2013auth.json  2013dump.json  2013dump.sql  2014dump.sql
campmanager/: fabfile.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
campmanager/deploy/: crontab  gunicorn.conf.py  gunicorn.conf.py.template  live_settings.py  local_settings.py.template  nginx.conf  supervisorctl.conf
campmanager/static/: humans.txt  robots.txt
deploy/: local_settings.py.template  nginx.conf.template
finances/: __init__.py  admin.py  admin_tests.py  apps.py  models.py
finances/migrations/: 0001_initial.py  0002_add_site_support.py  0002_auto__add_field_budget_active.py  0003_auto_20170702_1858.py  0004_auto__chg_field_transaction_origin__chg_field_transaction_destination_.py  0004_unique_with_site.py  0005_auto__chg_field_transaction_transaction_id.py
finances/south_migrations/: 0001_initial.py  0003_auto__del_budget__del_field_transaction_budget.py  0006_auto__chg_field_transaction_origin__chg_field_transaction_destination_.py  0007_auto__add_unique_transaction_transaction_id.py
general/: admin.py  admin_tests.py  apps.py  models.py  views.py
general/management/: commands_tests.py
general/migrations/: 0001_initial.py  0002_auto_20150522_2145.py  0003_auto_20150522_2249.py  0004_auto_20150524_1717.py  0005_auto_20150704_1310.py  0006_add_site_support.py  0007_auto_20170702_1858.py  0008_auto_20170716_2230.py  0009_camp_defaults.py  0010_camp_permission_location_nut_null.py
general/templates/: index.html  overview.html
logistics/: __init__.py  admin.py  apps.py  choices.py  models.py
logistics/migrations/: 0001_initial.py  0002_auto_20150522_1541.py  0002_auto__add_generation__chg_field_smallgroup_generation__add_index_small.py  0003_auto_20160512_1753.py  0003_auto__add_unique_smallgroup_title.py  0004_add_buses.py  0004_auto__chg_field_smallgroup_bus__chg_field_smallgroup_structure__chg_fi.py  0005_reorder_structures.py  0006_update_cabins.py  0007_add_site_support.py  0008_unique_with_site.py
logistics/south_migrations/: 0002_auto__del_generation__add_field_smallgroup_structure__chg_field_smallg.py
reports/: apps.py  num2word_ES.py  urls.py  views.py
reports/templatetags/: reports_tags.py
signup/: __init__.py  actions.py  admin.py  apps.py  choices.py  filters.py  forms.py  models.py  num2word_ES.py  resources.py  urls.py  validators.py  views.py
signup/migrations/: 0001_initial.py  0002_auto_20150522_1541.py  0002_auto__add_guest__add_field_counselor_cabin__del_field_camper_assigned_.py  0003_auto__chg_field_counselor_generation__chg_field_camper_generation__chg.py  0003_remove_camper_lawyer.py  0004_camper_lawyer.py  0005_auto_20150522_2307.py  0005_auto__chg_field_counselor_second_surname__chg_field_camper_second_surn.py  0006_auto_20150524_1732.py  0007_auto_20150531_1902.py  0008_auto_20150704_1310.py  0009_auto_20160512_1753.py  0009_auto__add_unique_payment_receipt_id.py  (+15 more)
utils/: admin.py  models.py  resources.py  urls.py  views.py
(+36 files in other folders)
